--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     </nav>
 
     <div class="page-header">
-        <div class="spinning-square"></div><div class="page-header-overlay"></div>
+        <div class="page-header-pattern"></div><div class="page-header-overlay"></div>
         <div class="page-header-content"><span class="page-header-eyebrow">Est. 2016 — Kildonan, Winnipeg</span><h1>About <em>Us</em></h1></div>
     </div>
 
@@ -130,7 +130,7 @@
     </section>
 
     <section class="mission-section">
-        <div class="spinning-square"></div>
+        <div class="mission-pattern"></div>
         <div class="container">
             <div class="mission-inner">
                 <div class="mission-img reveal"><img src="our-mission.png" alt="Our Mission"></div>
@@ -178,4 +178,6 @@
         </div>
     </div></footer>
 
-    <script
+    <script src="shared.js"></script>
+</body>
+</html>
