--- a/donate.html
+++ b/donate.html
@@ -123,44 +123,60 @@
 
     <section class="newsletter-section"><div class="container"><div class="newsletter-inner">
         <div class="newsletter-text"><h3>Stay Connected</h3><p>Get updates on events &amp; announcements</p></div>
-        <form class="newsletter-form" onsubmit="subscribeNewsletter(event)"><input type="email" class="newsletter-input" placeholder="Your email address" required><button type="submit" class="newsletter-btn">Subscribe</button></form>
+        <form class="newsletter-form" onsubmit="subscribeNewsletter(event)">
+            <input type="email" class="newsletter-input" placeholder="Your email address" required>
+            <button type="submit" class="newsletter-btn">Subscribe</button>
+        </form>
     </div></div></section>
 
     <footer class="footer"><div class="container">
         <div class="footer-grid">
-            <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>A vibrant Islamic center serving Muslims in Winnipeg since 2016.</p><div class="footer-social"><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-youtube"></i></a><a href="#"><i class="fab fa-instagram"></i></a></div></div>
-            <div class="footer-col"><h4>Navigation</h4><ul><li><a href="index.html">Home</a></li><li><a href="prayer-times.html">Prayer Times</a></li><li><a href="activities.html">Activities</a></li><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact</a></li></ul></div>
-            <div class="footer-col"><h4>Programs</h4><ul><li><a href="activities.html">Sisters' Halaqa</a></li><li><a href="activities.html">Kids Quran Class</a></li><li><a href="activities.html">Quran Hifz</a></li><li><a href="activities.html">Study Club</a></li></ul></div>
-            <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div><div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div></div>
+            <div class="footer-brand">
+                <span class="logo-text-footer">Rahma Islamic Centre</span>
+                <p>A vibrant Islamic center serving Muslims in Winnipeg since 2016.</p>
+                <div class="footer-social">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-col"><h4>Navigation</h4><ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="prayer-times.html">Prayer Times</a></li>
+                <li><a href="programs.html">Programs &amp; Services</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul></div>
+            <div class="footer-col"><h4>Programs</h4><ul>
+                <li><a href="education.html">Quran Classes</a></li>
+                <li><a href="education.html">Arabic Classes</a></li>
+                <li><a href="education.html">Hifdh Program</a></li>
+                <li><a href="programs.html">All Programs</a></li>
+            </ul></div>
+            <div class="footer-col"><h4>Contact</h4>
+                <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
+                <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+            </div>
         </div>
-        <div class="footer-bottom"><span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span><span>Powered by Devodez Solutions</span></div>
+        <div class="footer-bottom">
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
+            <span>Powered by Devodez Solutions</span>
+        </div>
     </div></footer>
     <script src="shared.js"></script>
+
     <script>
         let cur = 'CAD';
-        function setCur(c) {
-            cur = c;
-            document.getElementById('curTag').textContent = c;
-            ['CAD','USD'].forEach(x => {
-                document.getElementById('btn'+x).classList.toggle('active', x === c);
-            });
-        }
-        function setAmt(v, el) {
-            document.getElementById('donateAmt').value = v;
-            document.querySelectorAll('.amt-btn').forEach(b => b.classList.remove('selected'));
-            el.classList.add('selected');
-        }
-        function clearAmts() {
-            document.querySelectorAll('.amt-btn').forEach(b => b.classList.remove('selected'));
-        }
+        function setCur(c) { cur=c; document.getElementById('curTag').textContent=c; ['CAD','USD'].forEach(x=>{document.getElementById('btn'+x).classList.toggle('active',x===c);}); }
+        function setAmt(v,el) { document.getElementById('donateAmt').value=v; document.querySelectorAll('.amt-btn').forEach(b=>b.classList.remove('selected')); el.classList.add('selected'); }
+        function clearAmts() { document.querySelectorAll('.amt-btn').forEach(b=>b.classList.remove('selected')); }
         function processDonate() {
-            const amt = parseFloat(document.getElementById('donateAmt').value);
-            if (!amt || amt <= 0) {
-                alert('Please enter a valid donation amount.');
-                return;
-            }
-            /* Rediriger vers PayPal ou afficher confirmation */
-            alert('Thank you for your generous donation of ' + cur + ' $' + amt.toFixed(2) + '!\nPlease contact us at rahmaislamiccentre@gmail.com to complete your donation.');
+            const amt=parseFloat(document.getElementById('donateAmt').value);
+            if(!amt||amt<=0){alert('Please enter a valid donation amount.');return;}
+            alert('Thank you for your generous donation of '+cur+' $'+amt.toFixed(2)+'!\nPlease contact rahmaislamiccentre@gmail.com to complete your donation.');
         }
     </script>
 </body>
