--- a/index.html
+++ b/index.html
@@ -275,126 +275,64 @@
     </section>
 
     <!-- NEWSLETTER -->
-    <section class="newsletter-section">
-        <div class="container"><div class="newsletter-inner">
-            <div class="newsletter-text"><h3>Stay Connected</h3><p>Get updates on events, prayer times &amp; announcements</p></div>
-            <form class="newsletter-form" onsubmit="subscribeNewsletter(event)">
-                <input type="email" class="newsletter-input" placeholder="Your email address" required id="nlEmail">
-                <button type="submit" class="newsletter-btn">Subscribe</button>
-            </form>
-        </div></div>
-    </section>
 
-    <footer class="footer">
-        <div class="footer-pattern"></div>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>A vibrant Islamic center dedicated to the spiritual, educational, and social needs of Muslims in Winnipeg since 2016.</p><div class="footer-social"><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-youtube"></i></a><a href="#"><i class="fab fa-instagram"></i></a></div></div>
-                <div class="footer-col"><h4>Navigation</h4><ul><li><a href="index.html">Home</a></li><li><a href="prayer-times.html">Prayer Times</a></li><li><a href="activities.html">Activities &amp; Services</a></li><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li></ul></div>
-                <div class="footer-col"><h4>Programs</h4><ul><li><a href="activities.html">Sisters' Halaqa</a></li><li><a href="activities.html">Kids Quran Class</a></li><li><a href="activities.html">Quran Hifz</a></li><li><a href="activities.html">Study Club</a></li><li><a href="activities.html">Daily Prayers</a></li></ul></div>
-                <div class="footer-col"><h4>Contact</h4><div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div><div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div><div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div></div>
+    <section class="newsletter-section"><div class="container"><div class="newsletter-inner">
+        <div class="newsletter-text"><h3>Stay Connected</h3><p>Get updates on events &amp; announcements</p></div>
+        <form class="newsletter-form" onsubmit="subscribeNewsletter(event)">
+            <input type="email" class="newsletter-input" placeholder="Your email address" required>
+            <button type="submit" class="newsletter-btn">Subscribe</button>
+        </form>
+    </div></div></section>
+
+    <footer class="footer"><div class="container">
+        <div class="footer-grid">
+            <div class="footer-brand">
+                <span class="logo-text-footer">Rahma Islamic Centre</span>
+                <p>A vibrant Islamic center serving Muslims in Winnipeg since 2016.</p>
+                <div class="footer-social">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
             </div>
-            <div class="footer-bottom"><span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span><span>Powered by Devodez Solutions</span></div>
+            <div class="footer-col"><h4>Navigation</h4><ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="prayer-times.html">Prayer Times</a></li>
+                <li><a href="programs.html">Programs &amp; Services</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul></div>
+            <div class="footer-col"><h4>Programs</h4><ul>
+                <li><a href="education.html">Quran Classes</a></li>
+                <li><a href="education.html">Arabic Classes</a></li>
+                <li><a href="education.html">Hifdh Program</a></li>
+                <li><a href="programs.html">All Programs</a></li>
+            </ul></div>
+            <div class="footer-col"><h4>Contact</h4>
+                <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
+                <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+            </div>
         </div>
-    </footer>
-
-    <!-- ═══ PRAYER WIDGET — script isolé, indépendant ═══ -->
-    <script>
-    try {
-        // Horloge
-        var _pt = document.getElementById('currentTime');
-        var _pd = document.getElementById('prayerDate');
-        if (_pd) _pd.textContent = new Date().toLocaleDateString('en-US',{weekday:'long',year:'numeric',month:'long',day:'numeric'});
-        function _tick(){ if(_pt) _pt.textContent = new Date().toLocaleTimeString('en-US',{hour:'2-digit',minute:'2-digit',hour12:true}); }
-        _tick(); setInterval(_tick, 1000);
-
-        // Formatage 24h → 12h
-        function _fmt(raw){
-            var s=(raw||'').split(' ')[0].split(':');
-            var h=parseInt(s[0])||0, m=s[1]||'00';
-            return (h%12||12)+':'+m+' '+(h>=12?'PM':'AM');
-        }
-
-        // Affiche les heures dans les cartes
-        function _show(T){
-            var names=['fajr','dhuhr','asr','maghrib','isha'];
-            var keys =['Fajr','Dhuhr','Asr','Maghrib','Isha'];
-            var nm=new Date().getHours()*60+new Date().getMinutes(), act='isha';
-            for(var i=0;i<names.length;i++){
-                var el=document.getElementById(names[i]+'-time');
-                if(el){ el.textContent=_fmt(T[keys[i]]); el.classList.remove('loading'); }
-                var p=(T[keys[i]]||'0:0').split(':');
-                if(nm>=parseInt(p[0])*60+parseInt(p[1])) act=names[i];
-            }
-            for(var j=0;j<names.length;j++){
-                var c=document.getElementById('card-'+names[j]);
-                if(c) c.classList.toggle('active-prayer', names[j]===act);
-            }
-        }
-
-        // Appel API Aladhan — fallback statique garanti
-        var _d=new Date();
-        var _url='https://api.aladhan.com/v1/timings/'+_d.getDate()+'-'+(_d.getMonth()+1)+'-'+_d.getFullYear()+'?latitude=49.8951&longitude=-97.1384&method=2';
-        var _xhr=new XMLHttpRequest();
-        _xhr.open('GET',_url,true);
-        _xhr.onload=function(){
-            try{
-                var data=JSON.parse(_xhr.responseText);
-                if(data.code===200&&data.data&&data.data.timings){ _show(data.data.timings); }
-                else{ _show({Fajr:'05:30',Dhuhr:'12:45',Asr:'15:30',Maghrib:'18:15',Isha:'19:45'}); }
-            }catch(e){ _show({Fajr:'05:30',Dhuhr:'12:45',Asr:'15:30',Maghrib:'18:15',Isha:'19:45'}); }
-        };
-        _xhr.onerror=function(){ _show({Fajr:'05:30',Dhuhr:'12:45',Asr:'15:30',Maghrib:'18:15',Isha:'19:45'}); };
-        _xhr.ontimeout=function(){ _show({Fajr:'05:30',Dhuhr:'12:45',Asr:'15:30',Maghrib:'18:15',Isha:'19:45'}); };
-        _xhr.timeout=8000;
-        _xhr.send();
-    }catch(e){}
-    </script>
+        <div class="footer-bottom">
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
+            <span>Powered by Devodez Solutions</span>
+        </div>
+    </div></footer>
     <script src="shared.js"></script>
-    <script>
-        /* ── Compteurs animés (About section) ── */
-        function animateCount(el, target) {
-            const start = performance.now();
-            const update = (now) => {
-                const p = Math.min((now - start) / 1500, 1);
-                const e = 1 - Math.pow(1 - p, 3);
-                el.textContent = Math.round(e * target);
-                if (p < 1) requestAnimationFrame(update);
-            };
-            requestAnimationFrame(update);
-        }
-        const sObs = new IntersectionObserver(entries => {
-            entries.forEach(e => {
-                if (e.isIntersecting) {
-                    animateCount(e.target, parseInt(e.target.dataset.target));
-                    sObs.unobserve(e.target);
-                }
-            });
-        }, { threshold: 0.5 });
-        document.querySelectorAll('[data-target]').forEach(el => sObs.observe(el));
 
-        /* ── Widget Donate (homepage) ── */
-        let currentCurrency = 'CAD';
-        function setAmount(val, el) {
-            document.getElementById('donateAmt').value = val;
-            document.querySelectorAll('.amount-pill').forEach(p => p.classList.remove('selected'));
-            el.classList.add('selected');
-        }
-        function setCurrency(cur) {
-            currentCurrency = cur;
-            document.getElementById('currencyTag').textContent = cur;
-            ['CAD','USD'].forEach(c => {
-                const b = document.getElementById('btn' + c);
-                b.style.background = c === cur ? 'rgba(201,168,76,0.15)' : 'transparent';
-                b.style.borderColor = c === cur ? 'var(--gold)' : 'rgba(255,255,255,0.15)';
-                b.style.color       = c === cur ? 'var(--gold)'  : 'rgba(255,255,255,0.5)';
-            });
-        }
-        function processDonate() {
-            const amt = parseFloat(document.getElementById('donateAmt').value);
-            if (!amt || amt <= 0) { alert('Please enter a valid amount.'); return; }
-            alert('Thank you! ' + currentCurrency + ' $' + amt.toFixed(2) + ' — please contact rahmaislamiccentre@gmail.com to complete your donation.');
-        }
+    <script>
+        /* Compteurs animés */
+        function animateCount(el,target){const s=performance.now();const u=(n)=>{const p=Math.min((n-s)/1500,1),e=1-Math.pow(1-p,3);el.textContent=Math.round(e*target);if(p<1)requestAnimationFrame(u);};requestAnimationFrame(u);}
+        const sObs=new IntersectionObserver(entries=>{entries.forEach(e=>{if(e.isIntersecting){animateCount(e.target,parseInt(e.target.dataset.target));sObs.unobserve(e.target);}});},{threshold:0.5});
+        document.querySelectorAll('[data-target]').forEach(el=>sObs.observe(el));
+        /* Widget Donate */
+        let currentCurrency='CAD';
+        function setAmount(val,el){document.getElementById('donateAmt').value=val;document.querySelectorAll('.amount-pill').forEach(p=>p.classList.remove('selected'));el.classList.add('selected');}
+        function setCurrency(cur){currentCurrency=cur;document.getElementById('currencyTag').textContent=cur;['CAD','USD'].forEach(c=>{const b=document.getElementById('btn'+c);b.style.background=c===cur?'rgba(201,168,76,0.15)':'transparent';b.style.borderColor=c===cur?'var(--gold)':'rgba(255,255,255,0.15)';b.style.color=c===cur?'var(--gold)':'rgba(255,255,255,0.5)';});}
+        function processDonate(){const amt=parseFloat(document.getElementById('donateAmt').value);if(!amt||amt<=0){alert('Please enter a valid amount.');return;}alert('Thank you! '+currentCurrency+' $'+amt.toFixed(2)+' — contact rahmaislamiccentre@gmail.com to complete your donation.');}
     </script>
 </body>
 </html>
